@@ -1,3 +1,5 @@
+// $Id$
+
 #ifndef CONNECTDIALOG_HH
 #define CONNECTDIALOG_HH
 
